# 3DAutomataPainting

./: Readme.txt
src/: CMakeLists.txt
src/Core/: CMakeLists.txt  G2AssimpSceneTextureGeneration.cpp
src/Renderer/: AutomataManagement.cl  CMakeLists.txt  Cursor.fs  Cursor.vs  DiffuseDefault.fs  DiffuseNormalDefault.fs  GenerateAllHeaders.py  Renderer.cpp  Renderer.hpp  SPState.cpp  SPState.hpp  Stage.cpp  Stage.hpp  StageLoadBundle.cpp  VolumeBlended.fs
src/application/: CMakeLists.txt  main.cpp
src/cmake/: CMakeLists.txt
